# StudyBible

./: .checkpoint.json  .coverage  .gitignore  .gitmodules  .post-regeneration-tasks.sh  CLAUDE_README.md  EurekaProtocol.md  IMPLEMENTATION_COMPLETE.md  JSON-Architecture-for-Biblical-Exegesis.md  README.md  StudyPrompt.md  USER_SUMMARY.md  index.html  package-lock.json  package.json  pytest.ini  requirements.txt
.claude.backup/: settings.local.json
.cpf/: AUTONOMOUS_MODE.md  config.json  mcp_status.sh
.github/workflows/: deploy.yml
Code/StudyBible/: .env.example  .gitignore
Code/StudyBible/data/NT/Acts/10/: 01.json
Code/StudyBible/src/: bible_structure.py  gemini_client.py  research_gemini.py  source_fetcher.py  verse_extractor.py
Code/StudyBible/tests/fixtures/: sblgnt_sample.txt
Code/StudyBible/tests/unit/: test_bible_structure.py  test_cli.py  test_gemini_client.py
Code/Suno/PrepareForDistrokit/: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
Code/Suno/PrepareForDistrokit/sice/: __init__.py  config.py
data/NT/Acts/10/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  19.json  20.json  21.json  22.json  23.json
output/metadata/: chapter_08.json
output/prompts/chapter_08/: slide_001.md  slide_002.md  slide_003.md  slide_004.md  slide_005.md  slide_006.md  slide_007.md  slide_008.md  slide_009.md  slide_010.md  slide_011.md  slide_012.md  slide_013.md  slide_014.md
schemas/: verse_schema.json
src/: __init__.py  batch_processor.py  cli.py  config.py  data_writer.py  exegesis_generator.py  fact_checker.py  schema_validator.py  tag_indexer.py  verse_extractor.py
tests/fixtures/: invalid_verse_bad_coordinates.json  invalid_verse_missing_field.json  oshb_sample.xml  valid_verse.json
tests/unit/: test_batch_processor.py  test_config.py  test_data_writer.py  test_exegesis_generator.py  test_fact_checker.py  test_gemini_client.py  test_schema_validator.py  test_source_fetcher.py  test_verse_extractor.py
verses/: ACTS-10-25.json
vocabularies/: controlled_terms.json
website/: .eleventy.js  index.njk  package.json
website/_data/: acts10_verses.js  tag_categories.json  tag_index.json  tag_statistics.json  verse_tags.json
website/_includes/: layout.njk
website/_site/: index.html
website/_site/acts/chapter-10/: index.html
website/_site/acts/chapter-10-old/: index.html
website/_site/acts/chapter-10-redesign/: index.html
website/acts/: chapter-10-old.njk  chapter-10-redesign.njk  chapter-10.njk
